fixes collections spacing on 'desktop'

--- a/sass/partials/search/_collections.scss
+++ b/sass/partials/search/_collections.scss
@@ -167,9 +167,8 @@
     }
     a {
       font-weight: bold;
-      padding-bottom: 1px;
       position: relative;
-      top: 2px;
+      top: 3px;
     }
   }
 }
